--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
         <head>
             <title>Gustavo Bañares</title> <!-- nome da página -->
+            <meta charset="utf-8">
         </head>
 
         
