--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <head>
             <title>Gustavo Bañares</title> <!-- nome da página -->
             <meta charset="utf-8">
+
+            <link rel="stylesheet" href="css/reset.css">
+            <link rel="stylesheet" href="css/index.css">
         </head>
 
         
@@ -23,3 +26,5 @@
         </body>
 
     </html>
+
+    
