Add button download CV

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
             <title>Gustavo Bañares</title> <!-- nome da página -->
             <meta charset="utf-8">
 
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="css/reset.css">
             <link rel="stylesheet" href="css/index.css">
         </head>
@@ -18,7 +21,7 @@
                         <a href="">Projetos</a>
                         <a href="">Sobre</a>
                         <a href="">Contatos</a>
-                        <a href="" lang="en">Download CV</a>    
+                        <a id="button" href="" lang="en">Download CV</a>    
                     
                 </nav>
 
