Upgrade colors and fonts

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
             <title>Gustavo Bañares</title> <!-- nome da página -->
             <meta charset="utf-8">
 
+            <link rel="preconnect" href="https://fonts.gstatic.com">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Press+Start+2P&display=swap" rel="stylesheet">
+
             <link rel="stylesheet" href="css/reset.css">
             <link rel="stylesheet" href="css/index.css">
         </head>
@@ -15,7 +17,7 @@
         
         <body>
             <header>
-
+                <h1>GB</h1>
                 <nav> <!-- navigation - navegação do site, tag utilizada para guardar os links de navegação-->
                         <a href="" lang="en">Skills</a>    
                         <a href="">Projetos</a>
