Create the title component

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
             <link rel="stylesheet" href="css/reset.css">
             <link rel="stylesheet" href="css/index.css">
+            <link rel="stylesheet" href="css/components/title.css">
         </head>
 
         
@@ -28,7 +29,9 @@
                 </nav>
 
             </header>
+             <h2>Gustavo Bañares</h2><!-- heading h2-->
         </body>
+
 
     </html>
 
