--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <link rel="stylesheet" href="css/reset.css">
             <link rel="stylesheet" href="css/index.css">
             <link rel="stylesheet" href="css/components/title.css">
+            <link rel="stylesheet" href="css/components/subtitle.css">
         </head>
 
         
@@ -30,6 +31,7 @@
 
             </header>
              <h2>Gustavo Bañares</h2><!-- heading h2-->
+             <h3>Software Engineer</h3>
         </body>
 
 
