--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <link rel="stylesheet" href="css/index.css">
             <link rel="stylesheet" href="css/components/title.css">
             <link rel="stylesheet" href="css/components/subtitle.css">
+            <link rel="stylesheet" href="css/components/box.css">
         </head>
 
         
@@ -32,6 +33,7 @@
             </header>
              <h2>Gustavo Bañares</h2><!-- heading h2-->
              <h3>Software Engineer</h3>
+             <div id="box"></div>
         </body>
 
 
