Create component box

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
                 </nav>
 
             </header>
-             <h2>Gustavo Bañares</h2><!-- heading h2-->
-             <h3>Software Engineer</h3>
-             <div id="box"></div>
+             
+             <div id="box">
+                <h2>Gustavo Bañares</h2><!-- heading h2-->
+                <h3>Software Engineer</h3>
+             </div>
         </body>
 
 
