--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <link rel="stylesheet" href="css/components/action.css">
             <link rel="stylesheet" href="css/components/header.css">
             <link rel="stylesheet" href="css/components/logo.css">
+            <link rel="stylesheet" href="css/components/banner.css">
         </head>
 
         
@@ -35,14 +36,20 @@
                 </nav>
 
             </header>
-             
-             <div class="box">
-                <h2 class="title">Gustavo Bañares</h2><!-- heading h2-->
-                <h3 class="subtitle">Software Engineer</h3>
-             </div>
-             <a class="button" href="" lang="en">Download CV</a>
-             <a class="button" href="" >Contatos</a>
 
+            <section class="banner"> 
+                <div class="wrapper">
+                    <div class="box">
+                        <h2 class="title">Gustavo Bañares</h2><!-- heading h2-->
+                        <h3 class="subtitle">Software Engineer</h3>
+                    </div>
+
+                    <div class="navigation">
+                        <a class="button" href="" lang="en">Download CV</a>
+                        <a class="button" href="" >Contatos</a>
+                    </div>
+                </div>
+            </section>
         </body>
 
 
