Create the -second variation to title

--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
                         <a class="button" href="" lang="en">Download CV</a>
                         <a class="button" href="" >Contatos</a>
                     </div>
-                </div>
+                </div>   
+            </section>
+            
+            <section>
+                <h2 class="title -second">Skills</h2>
             </section>
         </body>
 
