Create the section component

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <link rel="stylesheet" href="css/components/header.css">
             <link rel="stylesheet" href="css/components/logo.css">
             <link rel="stylesheet" href="css/components/banner.css">
+            <link rel="stylesheet" href="css/components/section.css">
         </head>
 
         
@@ -50,8 +51,8 @@
                     </div>
                 </div>   
             </section>
-            
-            <section>
+
+            <section class="section">
                 <h2 class="title -second">Skills</h2>
             </section>
         </body>
