--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
             <link rel="stylesheet" href="css/reset.css">
             <link rel="stylesheet" href="css/index.css">
-            <link rel="stylesheet" href="css/components/title.css">
+            <link rel="stylesheet" href="css/components/main-title.css">
             <link rel="stylesheet" href="css/components/subtitle.css">
             <link rel="stylesheet" href="css/components/box.css">
             <link rel="stylesheet" href="css/components/button.css">
@@ -21,6 +21,8 @@
             <link rel="stylesheet" href="css/components/logo.css">
             <link rel="stylesheet" href="css/components/banner.css">
             <link rel="stylesheet" href="css/components/section.css">
+            <link rel="stylesheet" href="css/components/skill-tec.css">
+            <link rel="stylesheet" href="css/components/progress-bar.css">
         </head>
 
         
@@ -41,7 +43,7 @@
             <section class="banner"> 
                 <div class="wrapper">
                     <div class="box">
-                        <h2 class="title">Gustavo Bañares</h2><!-- heading h2-->
+                        <h2 class="main-title">Gustavo Bañares</h2><!-- heading h2-->
                         <h3 class="subtitle">Software Engineer</h3>
                     </div>
 
@@ -53,8 +55,19 @@
             </section>
 
             <section class="section">
-                <h2 class="title -second">Skills</h2>
+                <h2 class="main-title -second">Skills</h2>
+
+                <article class="skill-tec">
+                    <img class="icon" src="img/ico_html5.png" alt="Logo HTML5 em pixel art">
+                    <div class="right">
+                        <h3 class="title">HTML</h3>
+                        <progress class="progress-bar" max="100" value="70">
+                                70%
+                        </progress>
+                    </div>
+                </article>
             </section>
+
         </body>
 
 
