--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <link rel="stylesheet" href="css/components/section.css">
             <link rel="stylesheet" href="css/components/skill-tec.css">
             <link rel="stylesheet" href="css/components/progress-bar.css">
+            <link rel="stylesheet" href="css/components/wrapper-skill.css">
+            <link rel="stylesheet" href="css/components/card-project.css">
         </head>
 
         
@@ -57,15 +59,65 @@
             <section class="section">
                 <h2 class="main-title -second">Skills</h2>
 
-                <article class="skill-tec">
-                    <img class="icon" src="img/ico_html5.png" alt="Logo HTML5 em pixel art">
-                    <div class="right">
-                        <h3 class="title">HTML</h3>
-                        <progress class="progress-bar" max="100" value="70">
-                                70%
-                        </progress>
-                    </div>
-                </article>
+                <div class="wrapper-skill">
+                    <article class="skill-tec ">
+                        <img class="icon" src="img/ico_html5.png" alt="Logo HTML5 em pixel art">
+                        <div class="right">
+                            <h3 class="title">HTML</h3>
+                            <progress class="progress-bar" max="100" value="70">
+                                    70%
+                            </progress>
+                        </div>
+                    </article>
+                    <article class="skill-tec">
+                        <img class="icon" src="img/ico_mysql.png" alt="Logo MySQL em pixel art">
+                        <div class="right">
+                            <h3 class="title">MySQL</h3>
+                            <progress class="progress-bar" max="100" value="70">
+                                    70%
+                            </progress>
+                        </div>
+                    </article>
+                    <article class="skill-tec ">
+                        <img class="icon" src="img/ico_css3.png" alt="Logo CSS3 em pixel art">
+                        <div class="right">
+                            <h3 class="title">CSS</h3>
+                            <progress class="progress-bar" max="100" value="70">
+                                    70%
+                            </progress>
+                        </div>
+                    </article>
+                    <article class="skill-tec">
+                        <img class="icon" src="img/ico_js.png" alt="Logo JavaScript em pixel art">
+                        <div class="right">
+                            <h3 class="title">JavaScript</h3>
+                            <progress class="progress-bar" max="100" value="70">
+                                    70%
+                            </progress>
+                        </div>
+                    </article>
+                    <article class="skill-tec ">
+                        <img class="icon" src="img/ico_python.png" alt="Logo Python em pixel art">
+                        <div class="right">
+                            <h3 class="title">Python</h3>
+                            <progress class="progress-bar" max="100" value="70">
+                                    70%
+                            </progress>
+                        </div>
+                    </article>
+                </div>
+            </section>
+
+            <section class="section">
+                <figure class="card-project">
+                    <img class="logo" src="img/portfolio.png" alt="Logo do Portfolio">
+                </figure>
+              <!-- <figure class="card-project -blue">
+                    <img class="logo" src="" alt="Logo do Portfolio"> 
+                </figure>
+                <figure class="card-project">
+                    <img class="logo" src="" alt="Logo do Portfolio">
+                </figure> --caso precise adicionar mais projetos excluir esse comentário -->
             </section>
 
         </body>
