--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                 </div>
             </section>
 
-            <section class="section">
+            <section class="section -bgBlack -bdFirst">
+                <h2 class="main-title -second">Projetos</h2>
                 <figure class="card-project">
                     <img class="logo" src="img/portfolio.png" alt="Logo do Portfolio">
                 </figure>
