Create the wrapper-card component

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <link rel="stylesheet" href="css/components/progress-bar.css">
             <link rel="stylesheet" href="css/components/wrapper-skill.css">
             <link rel="stylesheet" href="css/components/card-project.css">
+            <link rel="stylesheet" href="css/components/wrapper-card.css">
         </head>
 
         
@@ -110,15 +111,18 @@
 
             <section class="section -bgBlack -bdFirst">
                 <h2 class="main-title -second">Projetos</h2>
-                <figure class="card-project">
-                    <img class="logo" src="img/portfolio.png" alt="Logo do Portfolio">
-                </figure>
-              <!-- <figure class="card-project -blue">
-                    <img class="logo" src="" alt="Logo do Portfolio"> 
-                </figure>
-                <figure class="card-project">
-                    <img class="logo" src="" alt="Logo do Portfolio">
-                </figure> --caso precise adicionar mais projetos excluir esse comentário -->
+
+                <div class="wrapper-card">
+                    <figure class="card-project">
+                        <img class="logo" src="img/portfolio.png" alt="Logo do Portfolio">
+                    </figure>
+                <!-- <figure class="card-project -blue">
+                        <img class="logo" src="" alt="Logo do Portfolio"> 
+                    </figure>
+                    <figure class="card-project">
+                        <img class="logo" src="" alt="Logo do Portfolio">
+                    </figure> --caso precise adicionar mais projetos excluir esse comentário -->
+                </div>
             </section>
 
         </body>
