Add the links to card-project

--- a/index.html
+++ b/index.html
@@ -113,9 +113,11 @@
                 <h2 class="main-title -second">Projetos</h2>
 
                 <div class="wrapper-card">
-                    <figure class="card-project">
-                        <img class="logo" src="img/portfolio.png" alt="Logo do Portfolio">
-                    </figure>
+                    <a href="https://gustavobanares.github.io/Portfolio/">
+                        <figure class="card-project">
+                            <img class="logo" src="img/portfolio.png" alt="Logo do Portfolio">
+                        </figure>
+                    </a>
                 <!-- <figure class="card-project -blue">
                         <img class="logo" src="" alt="Logo do Portfolio"> 
                     </figure>
