--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <link rel="stylesheet" href="css/components/subtitle.css">
             <link rel="stylesheet" href="css/components/box.css">
             <link rel="stylesheet" href="css/components/button.css">
-            <link rel="stylesheet" href="css/components/action.css">
+            <link rel="stylesheet" href="css/components/main-action.css">
             <link rel="stylesheet" href="css/components/header.css">
             <link rel="stylesheet" href="css/components/logo.css">
             <link rel="stylesheet" href="css/components/banner.css">
@@ -33,10 +33,10 @@
             <header class="header">
                 <h1 class="logo">GB</h1>
                 <nav> <!-- navigation - navegação do site, tag utilizada para guardar os links de navegação-->
-                        <a class="action" href="" lang="en">Skills</a>    
-                        <a class="action" href="">Projetos</a>
-                        <a class="action" href="">Sobre</a>
-                        <a class="action" href="">Contatos</a>
+                        <a class="main-action" href="" lang="en">Skills</a>    
+                        <a class="main-action" href="">Projetos</a>
+                        <a class="main-action" href="">Sobre</a>
+                        <a class="main-action" href="">Contatos</a>
                         <a class="button" href="" lang="en">Download CV</a>    
                     
                 </nav>
