--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <link rel="stylesheet" href="css/components/main-action.css">
             <link rel="stylesheet" href="css/components/header.css">
             <link rel="stylesheet" href="css/components/logo.css">
-            <link rel="stylesheet" href="css/components/banner.css">
+            <link rel="stylesheet" href="css/components/main-banner.css">
             <link rel="stylesheet" href="css/components/section.css">
             <link rel="stylesheet" href="css/components/skill-tec.css">
             <link rel="stylesheet" href="css/components/progress-bar.css">
@@ -43,7 +43,7 @@
 
             </header>
 
-            <section class="banner"> 
+            <section class="main-banner"> 
                 <div class="wrapper">
                     <div class="box">
                         <h2 class="main-title">Gustavo Bañares</h2><!-- heading h2-->
