--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <link rel="stylesheet" href="css/index.css">
             <link rel="stylesheet" href="css/components/main-title.css">
             <link rel="stylesheet" href="css/components/subtitle.css">
-            <link rel="stylesheet" href="css/components/box.css">
+            <link rel="stylesheet" href="css/components/main-box.css">
             <link rel="stylesheet" href="css/components/button.css">
             <link rel="stylesheet" href="css/components/main-action.css">
             <link rel="stylesheet" href="css/components/header.css">
@@ -45,7 +45,7 @@
 
             <section class="main-banner"> 
                 <div class="wrapper">
-                    <div class="box">
+                    <div class="main-box">
                         <h2 class="main-title">Gustavo Bañares</h2><!-- heading h2-->
                         <h3 class="subtitle">Software Engineer</h3>
                     </div>
