--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <link rel="stylesheet" href="css/reset.css">
             <link rel="stylesheet" href="css/index.css">
             <link rel="stylesheet" href="css/components/main-title.css">
-            <link rel="stylesheet" href="css/components/subtitle.css">
+            <link rel="stylesheet" href="css/components/main-subtitle.css">
             <link rel="stylesheet" href="css/components/main-box.css">
             <link rel="stylesheet" href="css/components/main-button.css">
             <link rel="stylesheet" href="css/components/main-action.css">
@@ -47,7 +47,7 @@
                 <div class="wrapper">
                     <div class="main-box">
                         <h2 class="main-title">Gustavo Bañares</h2><!-- heading h2-->
-                        <h3 class="subtitle">Software Engineer</h3>
+                        <h3 class="main-subtitle">Software Engineer</h3>
                     </div>
 
                     <div class="navigation">
