Add main section in line 112

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
             </section>
 
-            <section class="section -bgBlack -bdFirst">
+            <section class="main-section -bgBlack -bdFirst">
                 <h2 class="main-title -second">Projetos</h2>
 
                 <div class="wrapper-card">
