--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <link rel="stylesheet" href="css/components/wrapper-skill.css">
             <link rel="stylesheet" href="css/components/card-project.css">
             <link rel="stylesheet" href="css/components/wrapper-card.css">
+            <link rel="stylesheet" href="css/components/main-description.css">
         </head>
 
         
@@ -127,6 +128,11 @@
                 </div>
             </section>
 
+            <section class="main-section -bgSecond -bdBlack">
+                <h2 class="main-title -second">Sobre</h2>
+                <p class="main-description">Sou formado em Análise e Desenvolvimento de Sistemas e estou em busca de uma oportunidade para atuar como desenvolvedor. Tenho uma sólida formação acadêmica, aliada a um profundo interesse em tecnologia e inovação. Durante meus estudos, desenvolvi habilidades técnicas em diversas linguagens de programação, frameworks e metodologias ágeis.
+                Estou ansioso para aplicar meu conhecimento em um ambiente desafiador e colaborativo, onde possa contribuir para o desenvolvimento de soluções tecnológicas eficazes e continuar aprimorando minhas habilidades. Estou comprometido com a entrega de código de alta qualidade e a resolução de problemas complexos, sempre buscando a melhor experiência para o usuário final.</p>
+            </section>
         </body>
 
 
