--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <link rel="stylesheet" href="css/components/card-project.css">
             <link rel="stylesheet" href="css/components/wrapper-card.css">
             <link rel="stylesheet" href="css/components/main-description.css">
+            <link rel="stylesheet" href="css/components/button-arrow.css">
+            <link rel="stylesheet" href="css/components/node-card.css">
+            <link rel="stylesheet" href="css/components/main-carousel.css">
         </head>
 
         
@@ -132,6 +135,37 @@
                 <h2 class="main-title -second">Sobre</h2>
                 <p class="main-description">Sou formado em Análise e Desenvolvimento de Sistemas e estou em busca de uma oportunidade para atuar como desenvolvedor. Tenho uma sólida formação acadêmica, aliada a um profundo interesse em tecnologia e inovação. Durante meus estudos, desenvolvi habilidades técnicas em diversas linguagens de programação, frameworks e metodologias ágeis.
                 Estou ansioso para aplicar meu conhecimento em um ambiente desafiador e colaborativo, onde possa contribuir para o desenvolvimento de soluções tecnológicas eficazes e continuar aprimorando minhas habilidades. Estou comprometido com a entrega de código de alta qualidade e a resolução de problemas complexos, sempre buscando a melhor experiência para o usuário final.</p>
+
+                <section class="main-carousel">
+                <button class="button-arrow -left"><span class="content">Avançar</span></button>
+
+                    <div class="items">
+                        <div class="elements">
+                            <figure class="node-card">
+                                <figcaption class="title">2022</figcaption>
+                                <div class="logo">
+                                    <img src="img/logo-exército.png" alt="Logo Exército" >
+                                </div>
+                            </figure>
+
+                            <figure class="node-card">
+                                <figcaption class="title">2023</figcaption>
+                                <div class="logo">
+                                <img src="img/logo-clarios.png" alt="Logo Clarios" >
+                        </div>
+                        </figure>
+                        </div>
+                    </div>
+                    
+
+                <button class="button-arrow -right"><span class="content">Voltar</span></button>
+            </section>
+            </section>
+
+
+
+            <section class="main-section -bgThird -bdSecond">
+                <h2 class="main-title -second">Contatos</h2>
             </section>
         </body>
 
