Create the main-form component

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <script src="js/components/main-carousel.js"></script>
 
                                         
-            <form>
+            <form class="main-form">
                 <label class="main-label" for="name">Nome</label>
                 <input class="main-input" id="name" type="text">
 
